jwt için güncellemeler yapıldı, register henüz sağlanmadı.